refactor/#7/database_mapping
ListOrderEntity <-> MemberEntity
ListOrderEntity <-> StoreEntity